--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ nav:
   - Manual de uso - Administradores: manual_de_uso_administrador.md
   - Manual de uso - Almoxarife: manual_de_uso_almoxarife.md
   - Manual de uso - Instalação: manual_de_instalacao.md
-  - Manual de uso - Operadores: manual_de_uso_operadores.md
+  - Manual de uso - Operadores: manual_de uso_operadores.md
   - Metricas do Software: metricas_software.md
   - Padrões de Codificação: padroes_codificacao.md
   - Plano de projeto: plano_de_projeto.md
