--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ nav:
   - Padrões de Codificação: padroes_codificacao.md
   - Plano de projeto: plano_de_projeto.md
   - Registro de mudanças: registro_de_mudancas.md
-  - Testes - Casos: testes_dasos.md
+  - Testes - Casos: testes_casos.md
   - Testes - Plano: testes_plano.md
   - Testes - Relatórios: testes_relatorios.md
   - Versionamento: versionamento.md
